employee-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    app: employee-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
