employee-service/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employee-service
  namespace: dev
spec:
  hosts:
  - "*"
  gateways:
  - employee-gateway
  http:
  - match:
    - uri:
        prefix: "/apis/v1/employees"
    route:
    - destination:
        host: employee-service.dev.svc.cluster.local
        port:
          number: 8080
